--- a/index.htm
+++ b/index.htm
@@ -242,16 +242,15 @@
             </div>
             <div class="header-bottom">
                 <div class="close-button"></div>
-                <div class="menu-box"><a href="#screen-1" class="menu-item scroll">Главная</a><a href="#screen-result-2"
-                                                                                                 class="menu-item scroll">Результаты</a><a
-                            href="#screen-4" class="menu-item scroll">Стоимость</a><a href="#awards-screen"
-                                                                                      class="menu-item scroll">О
-                        процедуре</a>
+                <div class="menu-box">
+                    <a href="#screen-1" class="menu-item scroll">Главная</a>
+                    <a href="#screen-result-2" class="menu-item scroll">Результаты</a>
+                    <a href="#screen-4" class="menu-item scroll">Стоимость</a>
+                    <a href="#awards-screen" class="menu-item scroll">О процедуре</a>
                     <a href="#screen-3" class="menu-item scroll">О врачах</a>
-                    <!--a.menu-item.scroll(href='#screen-feed') Отзывы
-                    --><a href="#screen-tehn" class="menu-item scroll no-mobile">Технология</a><a href="#screen-cert"
-                                                                                        class="menu-item scroll no-mobile">Сертификаты</a><a
-                            href="#screen-cont" class="menu-item scroll">Контакты</a>
+                    <a href="#screen-tehn" class="menu-item scroll no-mobile">Технология</a>
+                    <a href="#screen-cert" class="menu-item scroll no-mobile">Сертификаты</a>
+                    <a href="#screen-cont" class="menu-item scroll">Контакты</a>
                 </div>
             </div>
         </div>
