--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
         <meta http-equiv="cache-control" content="no-cache">
         <meta http-equiv="expires" content="0">
 
+        <link rel="stylesheet" href="./css/style.css">
 
         <title>BodyFX от InMode - Безоперационная липосакция и лифтинг кожи в клинике Амориа</title>
         <link href="http://body-fx.amoriya.ru/img/favicon.png?v=2" rel="shortcut icon" type="x-icon">
@@ -243,14 +244,58 @@
             <div class="header-bottom">
                 <div class="close-button"></div>
                 <div class="menu-box">
-                    <a href="#screen-1" class="menu-item scroll">Главная</a>
-                    <a href="#screen-result-2" class="menu-item scroll">Результаты</a>
-                    <a href="#screen-4" class="menu-item scroll">Стоимость</a>
-                    <a href="#awards-screen" class="menu-item scroll">О процедуре</a>
-                    <a href="#screen-3" class="menu-item scroll">О врачах</a>
-                    <a href="#screen-tehn" class="menu-item scroll no-mobile">Технология</a>
-                    <a href="#screen-cert" class="menu-item scroll no-mobile">Сертификаты</a>
-                    <a href="#screen-cont" class="menu-item scroll">Контакты</a>
+                    <div class="item">
+                        <a href="#screen-1" class="menu-item scroll">Главная</a>
+                    </div>
+                    <div class="item">
+                        <a href="#screen-result-2" class="menu-item scroll">Результаты</a>
+                    </div>
+                    <div class="item">
+                        <a href="#" class="menu-item has-dropdown">Все услуги</a>
+                        <div class="dropdown">
+                            <ul>
+                                <li><a href="http://amoriya.ru" target="_blank">Сайт клиники</a></li>
+                                <li><a href="http://ulthera.amoriya.ru/" target="_blank">Альтера (Ulthera System)</a></li>
+                                <li><a href="http://ulfit-therapy.amoriya.ru/" target="_blank">ULFIT - аппаратная липосакция</a></li>
+                                <li><a href="http://ultraformer-body.amoriya.ru" target="_blank">ULTRAFORMER тело</a></li>
+                                <li><a href="http://ultraformer-face.amoriya.ru/" target="_blank">ULTRAFORMER лицо</a></li>
+                                <li><a href="http://lumecca.amoriya.ru/" target="_blank">Фотоомоложение</a></li>
+                                <li><a href="http://fractora-firm.amoriya.ru/" target="_blank">Fractora Firm</a></li>
+                                <li><a href="http://fractora-facial.amoriya.ru/" target="_blank">Fractora Facial</a></li>
+                                <li><a href="http://fraxel.amoriya.ru/" target="_blank">Fraxel - лазерное омоложение</a></li>
+                                <li><a href="http://blepharoplasty.amoriya.ru/" target="_blank">ЭНЕРГИЯ ПЛАЗМЫ (безопер. блефаропластика)</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="http://thread-lifting.amoriya.ru/" target="_blank">Нитевой лифтинг</a></li>
+                                <li><a href="http://body-fx.amoriya.ru/" target="_blank">Body Fx</a></li>
+                                <li><a href="http://rhinoplasty.amoriya.ru/" target="_blank">Безоперационная ринопластика</a></li>
+                                <li><a href="http://contouring.amoriya.ru/" target="_blank">Контурная пластика</a></li>
+                                <li><a href="http://biorevitalization.amoriya.ru/" target="_blank">Биоревитализация</a></li>
+                                <li><a href="http://epilation.amoriya.ru/" target="_blank">Лазерная эпиляция Diolaze</a></li>
+                                <li><a href="http://botox.amoriya.ru/" target="_blank">Ботулинотерапия</a></li>
+                                <li><a href="http://панические-атаки-лечение.рф/" target="_blank">Лечение панических атак</a></li>
+                                <li><a href="http://discount.amoriya.ru/" target="_blank">Абонементы на процедуры</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <a href="#screen-4" class="menu-item scroll">Стоимость</a>
+                    </div>
+                    <div class="item">
+                        <a href="#awards-screen" class="menu-item scroll">О процедуре</a>
+                    </div>
+                    <div class="item">
+                        <a href="#screen-3" class="menu-item scroll">О врачах</a>
+                    </div>
+                    <div class="item">
+                        <a href="#screen-tehn" class="menu-item scroll no-mobile">Технология</a>
+                    </div>
+                    <div class="item">
+                        <a href="#screen-cert" class="menu-item scroll no-mobile">Сертификаты</a>
+                    </div>
+                    <div class="item">
+                        <a href="#screen-cont" class="menu-item scroll">Контакты</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1622,12 +1667,15 @@
             </div>
             <div id="good" class="0no-good"></div>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-            <script type="text/javascript" src="js/slick.min.js"></script>
+            <script type="text/javascript" src="http://body-fx.amoriya.ru/js/slick.min.js"></script>
             <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-            <script type="text/javascript" src="js/lpscript.js"></script>
-            <script type="text/javascript" src="popup/popup.js"></script>
-            <script type="text/javascript" src="js/jquery.inputmask.js"></script>
-            <script type="text/javascript" src="js/modernizr.custom.js"></script>
+            <script type="text/javascript" src="./js/lpscript.js"></script>
+            <script type="text/javascript" src="http://body-fx.amoriya.ru/popup/popup.js"></script>
+            <script type="text/javascript" src="http://body-fx.amoriya.ru/js/jquery.inputmask.js"></script>
+            <script type="text/javascript" src="http://body-fx.amoriya.ru/js/modernizr.custom.js"></script>
+
+
+            <script src="./js/script.js"></script>
 
 
             <style>
